import { Controller } from '@nestjs/common';
import { GrpcMethod } from '@nestjs/microservices';

/**
 * 考试微服务 - gRPC 控制器
 * 
 * 职责：
 * 1. 实现 exam.proto 定义的服务接口
 * 2. 处理来自 API Gateway 的 gRPC 请求
 * 3. 调用业务逻辑层
 * 
 * 注意：这是一个独立的微服务，需要单独部署
 */
@Controller()
export class ExamGrpcController {
  // 这里注入 ExamsService（需要在独立的微服务中实现）
  // constructor(private readonly examsService: ExamsService) {}

  /**
   * 创建考试
   */
  @GrpcMethod('ExamService', 'Create')
  async create(data: {
    title: string;
    description: string;
    duration: number;
    totalScore: number;
    paperId: string;
    startTime: string;
    endTime: string;
  }) {
    // TODO: 实现创建逻辑
    // const exam = await this.examsService.create(data);
    
    // 返回符合 Proto 定义的响应
    return {
      id: 'exam_123',
      title: data.title,
      description: data.description,
      duration: data.duration,
      totalScore: data.totalScore,
      status: 'DRAFT',
      startTime: data.startTime,
      endTime: data.endTime,
      createdAt: new Date().toISOString(),
    };
  }

  /**
   * 根据 ID 查询考试
   */
  @GrpcMethod('ExamService', 'FindById')
  async findById(data: { id: string }) {
    // TODO: 实现查询逻辑
    // const exam = await this.examsService.findById(data.id);
    
    return {
      id: data.id,
      title: '期末考试',
      description: '本学期期末考试',
      duration: 120,
      totalScore: 100,
      status: 'PUBLISHED',
      startTime: '2024-01-01T00:00:00Z',
      endTime: '2024-01-01T02:00:00Z',
      createdAt: '2023-12-01T00:00:00Z',
    };
  }

  /**
   * 获取考试列表
   */
  @GrpcMethod('ExamService', 'List')
  async list(data: {
    page: number;
    limit: number;
    status: string;
  }) {
    // TODO: 实现列表查询逻辑
    // const result = await this.examsService.findAll(data);
    
    return {
      exams: [
        {
          id: 'exam_1',
          title: '期末考试',
          description: '本学期期末考试',
          duration: 120,
          totalScore: 100,
          status: 'PUBLISHED',
          startTime: '2024-01-01T00:00:00Z',
          endTime: '2024-01-01T02:00:00Z',
          createdAt: '2023-12-01T00:00:00Z',
        },
      ],
      total: 1,
      page: data.page,
      limit: data.limit,
    };
  }

  /**
   * 更新考试
   */
  @GrpcMethod('ExamService', 'Update')
  async update(data: {
    id: string;
    title: string;
    description: string;
    duration: number;
    status: string;
  }) {
    // TODO: 实现更新逻辑
    // const exam = await this.examsService.update(data.id, data);
    
    return {
      id: data.id,
      title: data.title,
      description: data.description,
      duration: data.duration,
      totalScore: 100,
      status: data.status,
      startTime: '2024-01-01T00:00:00Z',
      endTime: '2024-01-01T02:00:00Z',
      createdAt: '2023-12-01T00:00:00Z',
    };
  }

  /**
   * 删除考试
   */
  @GrpcMethod('ExamService', 'Delete')
  async delete(data: { id: string }) {
    // TODO: 实现删除逻辑
    // await this.examsService.delete(data.id);
    
    return {
      success: true,
      message: '删除成功',
    };
  }

  /**
   * 开始考试
   */
  @GrpcMethod('ExamService', 'Start')
  async start(data: {
    examId: string;
    userId: string;
  }) {
    // TODO: 实现开始考试逻辑
    // const record = await this.examsService.startExam(data);
    
    return {
      id: 'record_123',
      examId: data.examId,
      userId: data.userId,
      score: 0,
      totalScore: 100,
      status: 'IN_PROGRESS',
      startTime: new Date().toISOString(),
      endTime: '',
    };
  }

  /**
   * 提交考试
   */
  @GrpcMethod('ExamService', 'Submit')
  async submit(data: {
    recordId: string;
    answers: string;
  }) {
    // TODO: 实现提交考试逻辑
    // const record = await this.examsService.submitExam(data);
    
    return {
      id: data.recordId,
      examId: 'exam_123',
      userId: 'user_123',
      score: 85,
      totalScore: 100,
      status: 'COMPLETED',
      startTime: '2024-01-01T00:00:00Z',
      endTime: new Date().toISOString(),
    };
  }
}

